--- a/RhinoshareApp/rhinoshareapp/src/main/resources/static/css/stylesheet.css
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/static/css/stylesheet.css
@@ -366,38 +366,6 @@ th, td {
     background-color: #1092ed;
 }
 
-.navigationbar_sub {
-    margin-top: 5px;
-    list-style-type: none;
-    border-radius: 7px;
-    height: 25px;
-
-    overflow: hidden;
-    background-color: #bfbfbf;
-}
-
-.navbaritem_sub {
-    float: left;
-}
-
-.navbaritem_sub a {
-    height: 100%;
-    display: block;
-    color: #0e0e0e;
-    border-radius: 7px;
-    font-family: Geneva;
-    text-align: center;
-    padding-left: 10px;
-    padding-right: 10px;
-    text-decoration: none;
-}
-
-
-.navbaritem_sub a:hover:not(.active) {
-    background-color: rgba(16, 146, 237, 0.51);
-    transition-duration: 400ms;
-}
-
 
 #titleImageTest {
     display: block;
@@ -536,8 +504,7 @@ body {
 
 .contentFragment .container {
     margin: auto;
-    width: 60%;
-    padding: 10px;
+    width: 75%;
 }
 
 .contentFragment table {
@@ -564,4 +531,87 @@ body {
     border-radius: 4px;
     box-sizing: border-box;
     height: 40px;
+}
+
+.article-picture img {
+    max-width: 130px;
+    max-height: 90px;
+    grid-area: picture;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    background-color: #ffffff;
+    padding: 10px;
+    width: 100%;
+}
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    border-radius: 7px;
+    width: 210px;
+    height: 250px;
+    font-size: 12px;
+    font-weight: normal;
+    text-align: left;
+    padding-bottom: 2px;
+    margin-top: 20px;
+}
+
+.grid-item:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    transition-duration: 200ms;
+}
+
+.contentFragment .grid-container .grid-item .article-name {
+    font-size: 18px;
+}
+
+.contentFragment .grid-container .grid-item .article-lending-price {
+
+    font-size: 14px;
+}
+
+.contentFragment .grid-container .grid-item .article-price {
+
+    font-size: 14px;
+
+}
+
+
+.article-picture {
+    grid-area: picture;
+}
+.article-name {
+    grid-area: name;
+}
+
+.article-lending-price {
+    grid-area: price-lending;
+}
+
+.article-price {
+    grid-area: price-buy;
+}
+
+.details-button-article {
+    grid-area: button;
+}
+
+.item-grid-article {
+    display: grid;
+    grid-template-areas: 'picture picture picture'
+                         'name name price-lending'
+                         'button button price-buy';
+    background-color: rgba(255, 255, 255, 0);
+    width: 100%;
+    height: 100%;
+}
+
+.item-grid-article > div {
+    background-color: rgba(255, 255, 255, 0);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
 }
