refactored the name

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/conflictPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/conflictPage.html
@@ -32,7 +32,7 @@
             <h3>comment =</h3>
             <div th:text="${yourConflict.lendedArticle.comment}">0</div>
             <h3>Who was lending your Article =</h3>
-            <div th:text="${yourConflict.lendingPerson}">0</div>
+            <div th:text="${yourConflict.lendingPerson.name}">0</div>
             <h3>Deposit =</h3>
             <div th:text="${yourConflict.lendedArticle.deposit}">0</div>
             <h3>Rent =</h3>
