messages can be deleted

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Chat/chat_deleteChat.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Chat/chat_deleteChat.html
@@ -32,39 +32,31 @@
         <a href="/logout">Ausloggen</a>
     </li>
 </ul>
+<div class ="container">
+    <form method="post" th:object="${chatMessage}">
+        <table>
+            <th>Von</th>
+            <th>Gesendet an</th>
+            <th>Nachricht</th>
+            <tr>
+                <td th:text="${chatMessage.fromName}">...</td>
+                <td th:text="${chatMessage.toName}">...</td>
+                <td th:text="${chatMessage.context}">...</td>
+            </tr>
+        </table>
+         <p>Möchten Sie die Nachricht wirklich löschen? Die Nachricht wird für alle Benutzer gelöscht!</p>
+
+        <br>
+
+        <td>
+            <button type="submit"  class="btn btn-danger">Löschen</button>
+            <a th:href="|/chat/|"> <button class="btn btn-warning" type="button">Abbrechen</button></a>
+        </td>
 
 
+    </form>
+</div>
 
-<table>
-    <th>Von</th>
-    <th>Gesendet an</th>
-    <th>Nachricht</th>
-    <th:block th:each="message : ${listFrom}">
-        <tr>
-            <td th:text="${message.fromName}">...</td>
-            <td th:text="${message.toName}">...</td>
-            <td th:text="${message.context}">...</td>
-        </tr>
-
-    </th:block>
-</table>
-
-<table>
-    <th>Von</th>
-    <th>An</th>
-    <th>Nachricht</th>
-    <th:block th:each="message : ${listTo}">
-        <tr>
-            <td th:text="${message.fromName}">...</td>
-            <td th:text="${message.toName}">...</td>
-            <td th:text="${message.context}">...</td>
-            <td>
-                <a th:href="|/deletechat/${message.getMessageID()}|"> <button class="btn btn-danger" type="button">Nachricht löschen</button></a>
-            </td>
-        </tr>
-
-    </th:block>
-</table>
 
 </body>
 </html>
