--- a/RhinoshareApp/rhinoshareapp/src/main/resources/static/css/stylesheet.css
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/static/css/stylesheet.css
@@ -570,18 +570,18 @@ body {
 
 .contentFragment .grid-container .grid-item .article-lending-price {
 
-    font-size: 14px;
+    font-size: 20px;
 }
 
 .contentFragment .grid-container .grid-item .article-price {
 
-    font-size: 14px;
+    font-size: 25px;
 
 }
 
 .contentFragment .grid-container .grid-item .article-location {
 
-    font-size: 14px;
+    font-size: 18px;
 
 }
 
@@ -616,8 +616,8 @@ body {
 .item-grid-article {
     display: grid;
     grid-template-areas: 'picture picture picture'
-                         'name name price-lending'
-                         'location location button';
+                         'name name name'
+                         'location location price-lending';
     background-color: rgba(255, 255, 255, 0);
     width: 100%;
     height: 100%;
@@ -628,4 +628,24 @@ body {
     text-align: center;
     padding: 20px 0;
     font-size: 30px;
+}
+
+.contentFragment a:link {
+    text-decoration: none;
+    color: black;
+}
+
+.contentFragment a:visited {
+    text-decoration: none;
+    color: black;
+}
+
+.contentFragment a:hover {
+    text-decoration: none;
+    color: black;
+}
+
+.contentFragment a:active {
+    text-decoration: none;
+    color: black;
 }
