--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewFromPerson.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/viewFromPerson.html
@@ -7,31 +7,25 @@
 </head>
 
 <body>
-<div class="container" layout:fragment="content" style="margin-top: 50px">
+<div class="container" layout:fragment="content" style="margin-top: 20px">
         <h1 class="display-3">Übersicht</h1>
-        <div class="row mb-2">
-            <div class="col-md-6"  th:each="article:${articles}">
-                    <table class="table table-hover">
-                        <tr>
-                            <td>Artikel:</td>
-                            <td th:text="${article.getName()}"></td>
-                        </tr>
-                        <tr th:if="!${article.imageIsEmpty()}">
-                            <td>Artikelbild</td>
-                            <td> <img th:src="@{/image/{id} (id = ${article.getImageID()})}" width="200px" height=auto/></td>
-                        </tr>
-                        <tr>
-                            <td>Mietpreis:</td>
-                            <td th:text="${article.getRent()} + '€'"></td>
-                        </tr>
-                        <tr>
-                            <td><a th:href="|/article/admin/${article.articleID}|"><button class="btn btn-success" type="button">Zum Artikel</button></a></td>
-                        </tr>
-                    </table>
+    <div class="grid-container">
+        <a th:href="|/article/${article.articleID}|" class="grid-item" th:each="article:${articles}">
+            <div class="item-grid-article">
+                <div class="article-picture" th:if="!${article.imageIsEmpty()}">
+                    <img th:src="@{/image/{id} (id = ${article.getImageID()})}">
                 </div>
+                <div class="article-picture" th:if="${article.imageIsEmpty()}">
+                    <img src="/img/placeholder_picture.png">
+                </div>
+                <div class="article-name" th:text="${article.getName()}" >...</div>
+                <div class="article-location" th:text="${article.getCity()}" >...</div>
+                <div class="article-lending-price" th:text="${article.getRent()} + '€'">...</div>
             </div>
-        <a th:href="|/article/new/|"><button class="btn btn-primary" type="button">Neuen Artikel anlegen</button></a>
+
+        </a>
     </div>
+</div>
 </body>
 
 </html>
