--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/lendingRequest.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/lendingRequest.html
@@ -1,47 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/mainpage}"
       xmlns:layout="http://www.w3.org/1999/xhtml">
-<head>
-    <title>Formular</title>
-</head>
-<body onload="calculateDateBorders()">
-<div class="container" layout:fragment="content" style="margin-top: 50px">
-    <form th:action="@{/inquiry}" method="post">
-        <label>
-            from :
-            <input oninput="calculateDateBorders()" type="date" name="startDate" id="startDateID">
-            till :
-            <input type="date" name="endDate" id="endDateID">
-            why do you think you should get it :
-            <input type="text" name="requestComment">
-            <input type="hidden" name="requesterID" th:value="${requesterID}">
-            <input type="hidden" name="articleID" th:value="${articleID}">
-            <input type="hidden" name="requestValue" value="lending">
-        </label>
-        <button type="submit">submit</button>
-    </form>
 
-    <script th:inline="javascript">
-        function calculateDateBorders() {
-            var today = new Date();
-            var dd = today.getDate();
-            var mm = today.getMonth() + 1; //January is 0!
-            var yyyy = today.getFullYear();
-            if (dd < 10) {
-                dd = '0' + dd
-            }
-            if (mm < 10) {
-                mm = '0' + mm
-            }
+    <head>
+        <title>Ausleihformular</title>
+    </head>
 
-            today = yyyy + '-' + mm + '-' + dd;
-            document.getElementById("startDateID").setAttribute("min", today);
-            var choosenStartDate = document.getElementById("startDateID").value;
-            document.getElementById("endDateID").setAttribute("min", choosenStartDate);
-        }
-    </script>
-</div>
+    <body onload="calculateDateBorders()">
+        <div class="container" layout:fragment="content" style="margin-top: 50px">
+            <form th:action="@{/inquiry}" method="post">
+                <label>
+                    Von:
+                    <input oninput="calculateDateBorders()" type="date" name="startDate" id="startDateID">
+                    Bis:
+                    <input type="date" name="endDate" id="endDateID">
+                    Wofür möchtest du den Gegenstand benutzen:
+                    <input type="text" name="requestComment">
+                    <input type="hidden" name="requesterID" th:value="${requesterID}">
+                    <input type="hidden" name="articleID" th:value="${articleID}">
+                    <input type="hidden" name="requestValue" value="lending">
+                </label>
+                <button type="submit">Abschicken</button>
+            </form>
 
+            <script th:inline="javascript">
+                function calculateDateBorders() {
+                    var today = new Date();
+                    var dd = today.getDate();
+                    var mm = today.getMonth() + 1; //January is 0!
+                    var yyyy = today.getFullYear();
+                    if (dd < 10) {
+                        dd = '0' + dd
+                    }
+                    if (mm < 10) {
+                        mm = '0' + mm
+                    }
 
-</body>
+                    today = yyyy + '-' + mm + '-' + dd;
+                    document.getElementById("startDateID").setAttribute("min", today);
+                    var choosenStartDate = document.getElementById("startDateID").value;
+                    document.getElementById("endDateID").setAttribute("min", choosenStartDate);
+                }
+            </script>
+        </div>
+    </body>
+
 </html>
