--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overviewBorrows.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/overviewBorrows.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html >
 <html lang="en" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{/mainpage}"
       xmlns:layout="http://www.w3.org/1999/xhtml">
-<head>
-    <title>Ausgeliehene Geräte</title>
-</head>
-<body>
-<div class="container" layout:fragment="content" style="margin-top: 50px">
-    <dr>
-        <a th:href="@{/{username}(username = ${username})}" role="button">overview</a>
-    </dr>
-    <p> Sie bieten zur Ausleihe an !</p>
-    <table th:each="article : ${articles}">
-        <div style="margin:0; margin-right:10px; border:2px solid #dfdfdf;
-        padding: 0em 1em 1em 1em; background-color:#FFFFFF;text-align:center">
-            <h3>Articlename =</h3>
-            <div th:text="${article.name}">0</div>
-            <h3>comment =</h3>
-            <div th:text="${article.comment}">0</div>
-            <h3>Deposit =</h3>
-            <div th:text="${article.deposit}">0</div>
-            <h3>Rent =</h3>
-            <div th:text="${article.rent}">0</div>
-        </div>
-    </table>
-</div>
 
-</body>
+    <head>
+        <title>Angebotene Artikel</title>
+    </head>
+
+    <body>
+        <div class="container" layout:fragment="content" style="margin-top: 50px">
+            <dr>
+                <a th:href=|"/"| role="button">Zur Übersicht</a>
+            </dr>
+            <p> Sie bieten zur Ausleihe an: </p>
+            <table th:each="article : ${articles}">
+                <div style="margin:0; margin-right:10px; border:2px solid #dfdfdf;
+                padding: 0em 1em 1em 1em; background-color:#FFFFFF;text-align:center">
+                    <h3>Artikel: </h3>
+                    <div th:text="${article.name}">0</div>
+                    <h3>Beschreibung: </h3>
+                    <div th:text="${article.comment}">0</div>
+                    <h3>Kaution: </h3>
+                    <div th:text="${article.deposit}">0</div>
+                    <h3>Mietkosten: </h3>
+                    <div th:text="${article.rent}">0</div>
+                </div>
+            </table>
+        </div>
+    </body>
+
 </html>
