fix broken links in html files for lendings

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/errorPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/errorPage.html
@@ -11,7 +11,7 @@
             <div>
                 Grund:
                 <div th:text="${error}">0</div>
-                <a th:href=|"/"| role="button">Zur Übersicht</a>
+                <a th:href=|overview| role="button">Zur Übersicht</a>
             </div>
         </div>
     </body>
