--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/inquiry.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/inquiry.html
@@ -11,7 +11,7 @@
 
             <h>Ihre Anfrage wird bearbeitet...</h>
             <dr>
-                <a th:href=|"/"| role="button">Zur Übersicht</a>
+                <a th:href=|overview| role="button">Zur Übersicht</a>
             </dr>
         </div>
     </body>
