--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/transactionsPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/transactionsPage.html
@@ -39,7 +39,7 @@
                 </div>
             </table>
             <dr>
-                <a th:href=|"/"| role="button">Zur Übersicht</a>
+                <a th:href=|overview| role="button">Zur Übersicht</a>
             </dr>
         </div>
     </body>
