--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/povertyPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/povertyPage.html
@@ -10,7 +10,7 @@
         <div class="container" layout:fragment="content" style="margin-top: 50px">
             <h>Sorry, that you live in POVERTY you beggar</h>
             <dr>
-                <a th:href=|"/"| role="button">Zur Übersicht</a>
+                <a th:href=|overview| role="button">Zur Übersicht</a>
             </dr>
         </div>
     </body>
