--- a/RhinoshareApp/rhinoshareapp/src/main/resources/static/css/stylesheet.css
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/static/css/stylesheet.css
@@ -547,7 +547,7 @@ body {
     width: 100%;
 }
 .grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.8);
     border-radius: 7px;
     width: 210px;
@@ -561,6 +561,7 @@ body {
 
 .grid-item:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: rgb(226, 226, 226);
     transition-duration: 200ms;
 }
 
