--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/proPayOverview.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/proPayOverview.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container" layout:fragment="content" style="margin-top: 50px">
 
-            <a th:href=|overview| role="button">Zur Übersicht</a>
+            <a th:href=|| role="button">Zur Übersicht</a>
             <div>
                 Dein ProPay Account
                 <div style="margin:0; margin-right:10px; border:2px solid #dfdfdf;
@@ -24,7 +24,7 @@
                         </div>
                     </table>
                 </div>
-                <form th:action=|proPay| method="post">
+                <form th:action=|| method="post">
                     <label>
                         Wieviel wollen Sie auf Ihr ProPay Konto einzahlen?
                         <input type="number" name="amount">
