--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/articleView.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Article/articleView.html
@@ -56,10 +56,10 @@
                 <a th:href="|/article/delete/${article.getArticleID()}|"> <button class="button_std_red" type="button">Artikel löschen</button></a>
             </div>
             <div th:if="${article.owner != user} and ${article.available == true}">
-                <a th:href="|/lendingRequest/${article.articleID}|"> <button class="button_std" type="button">Artikel Ausleihen</button></a>
+                <a th:href="|/overview/lendingRequest/${article.articleID}|"> <button class="button_std" type="button">Artikel Ausleihen</button></a>
             </div>
             <div th:if="${article.owner != user} and ${article.forSale == true}">
-                <a th:href="|/saleRequest/${article.articleID}|"> <button class="button_std_red" type="button">Artikel kaufen</button></a>
+                <a th:href="|/overview/saleRequest/${article.articleID}|"> <button class="button_std_red" type="button">Artikel kaufen</button></a>
             </div>
             <div>
                 <a th:href="|/article/|"> <button class="button_std_white" type="button">Zurück zur Übersicht</button></a>
