fix EVEN MORE broken links

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/conflictPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/conflictPage.html
@@ -43,7 +43,7 @@
                 </div>
             </table>
             <dr>>
-                <a th:href=|| role="button">Zur Übersicht</a>
+                <a th:href="|/|" role="button">Zur Übersicht</a>
             </dr>
         </div>
     </body>
