--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/transactionsPage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/transactionsPage.html
@@ -21,7 +21,6 @@
                     <div th:text="${giving.article.name}">0</div>
                     <h3>Datum: </h3>
                     <div th:text="${giving.formattedTransactionDate}">0</div>
-
                 </div>
             </table>
             Einnahmen:
@@ -39,7 +38,7 @@
                 </div>
             </table>
             <dr>
-                <a th:href=|| role="button">Zur Übersicht</a>
+                <a th:href="|/|" role="button">Zur Übersicht</a>
             </dr>
         </div>
     </body>
