--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
@@ -14,9 +14,9 @@
 
         <ol class="navigationbar">
             <li class="navbaritem" th:classappend="${mainActive}"><a href="/">Rhino-Übersicht</a></li>
-
             <li class="navbaritem" th:classappend="${articleActive}"><a href="/article/">Artikel</a></li>
             <li class="navbaritem" th:classappend="${lendingActive}"><a href="/overview/">Ausleihen</a></li>
+            <li class="navbaritem" th:classappend="${newActive}"><a href="/article/new/">Artikel Anbieten</a></li>
 
             <li style="float: right;" class="navbaritem" th:classappend="${userActive}" href th:if="${loggedIn == 'false'}">
                 <a href="/login">Einloggen</a>
