fixed logo size

--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_overview.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Admin/admin_overview.html
@@ -11,7 +11,7 @@
     </head>
 
     <body>
-        <img id="titleImageTest" src="/img/rhinoLogoBigAdmin.png" width="300" height="75">
+        <img id="titleImageTest" src="/img/rhinoLogoSmallAdmin.png">
         <ul class="navigationbar">
             <li class="navbaritem" th:classappend="${mainActive}"><a href="/admin">Überblick</a></li>
             <li class="navbaritem" th:classappend="${userActive}"><a href="/admin/usermanagement">Benutzerverwaltung</a></li>
