--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/mainpage.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <img id="titleImage" src="/img/rhinoLogoBig_share.png" width="300" height="75">
+        <img id="titleImage" src="/img/rhinoLogoSmall_share.png">
 
         <ol class="navigationbar">
             <li class="navbaritem" th:classappend="${mainActive}"><a href="/">Rhino-Übersicht</a></li>
