--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/proPayOverview.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/proPayOverview.html
@@ -24,7 +24,7 @@
                         </div>
                     </table>
                 </div>
-                <form th:action="|/proPay|" method="post">
+                <form th:action="|/overview/proPay|" method="post">
                     <label>
                         Wieviel wollen Sie auf Ihr ProPay Konto einzahlen?
                         <input type="number" name="amount">
