--- a/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/sellRequest.html
+++ b/RhinoshareApp/rhinoshareapp/src/main/resources/templates/Lending/sellRequest.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container" layout:fragment="content" style="margin-top: 50px">
 
-            <form th:action="@{/inquiry}" method="post">
+            <form th:action="@{/overview/inquiry}" method="post">
                 <label>
                     Wofür wollen Sie den Artikel benutzen?
                     <input type="text" name="requestComment">
